@@ -78,13 +78,14 @@ namespace Chummer
         /// Performs a single step on the underlying ProgressBar
         /// </summary>
         /// <param name="strStepName">The text that the descriptive label above the ProgressBar should use, i.e. "Loading {strStepName}..."</param>
-        public void PerformStep(string strStepName = "")
+        /// <param name="blnSaving">Whether to use "Saving" instead of "Loading".</param>
+        public void PerformStep(string strStepName = "", bool blnSaving = false)
         {
             if (this.IsNullOrDisposed())
                 return;
             string strNewText = string.IsNullOrEmpty(strStepName)
-                    ? LanguageManager.GetString("String_Loading")
-                    : string.Format(GlobalOptions.CultureInfo, LanguageManager.GetString("String_Loading_Pattern"), strStepName);
+                    ? LanguageManager.GetString(blnSaving ? "String_Saving" : "String_Loading")
+                    : string.Format(GlobalOptions.CultureInfo, LanguageManager.GetString(blnSaving ? "String_Saving_Pattern" : "String_Loading_Pattern"), strStepName);
             if (pgbLoadingProgress.Maximum > 2)
                 strNewText += LanguageManager.GetString("String_Space") + '(' + (pgbLoadingProgress.Value + 1).ToString(GlobalOptions.CultureInfo)
                               + '/' + (pgbLoadingProgress.Maximum - 1).ToString(GlobalOptions.CultureInfo) + ')';
